--- a/css/style.css
+++ b/css/style.css
@@ -16,18 +16,19 @@ a {
   color: white;
   font-size: 1em;
 }
-hr {
+/* hr {
   border: 0;
   border-top: 1px solid rgb(148, 143, 143);
   margin: 20px 0;
-}
+} */
 footer {
+  border: 0;
+  border-top: 1px solid rgb(148, 143, 143);
   position: absolute;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
-  text-align: center;
   text-align: center;
   color: rgb(148, 143, 143);
 }
